@@ -3,19 +3,14 @@ TO DO
 - loading auto save files: fucked
 - either fix recent files/recent directories/current dir icon issue, or
   ditch icons
-- idea: position caret after [nnn lines] to insert stuff after a
-  collapsed fold? anything other than newline: insert before [nnn lines].
-  a newline: insert after last line of fold.
-- deleting last line breaks
 - compound edit buggyness
 - investigate alleged MacOS X keyboard problems
 - still fold at end expand bug
 - investigate nextLineRequested() -- replace with a buffer event.
-- test normal keys bound to actions
 - investigate wrap around in macros
 - stylesheet: keycap inside keycombo
-- help viewer: two tabs, contents and index. index browser
 - documentation to do
+  - close-*-docking-area shortcuts
   - mmb click in fs browser
   - File->Recent Directories menu
   - being able to use ~ in path names
@@ -34,6 +29,24 @@ TO DO
   - better window docking
   - smart case insens replace
   - API guide: compareStrings(), showPopupMenu()
+- search in directory: should use that file's extension
+- alt-key mnemonics for fields in vfs file dialog
+- -noplugins command line switch
+- I/O errors and plugin load errors batched together in one dialog box
+- plugin error dialogs have 'Update Plugins' button
+- icons in i/o error, plugin error dialog boxes
+- if moving caret resulted in expansion of a fold, that fold should be
+  collapsed when the caret leaves that fold
+- next-fold/prev-fold actions
+- plugin manager: show all dependencies, not just first-order ones
+- removing a plugin should offer to remove the ones that depend on it too
+- tab: if indent-on-tab on, only indent if in leading whitespace; make
+  indent on tab on by default
+
+- idea: position caret after [nnn lines] to insert stuff after a
+  collapsed fold? anything other than newline: insert before [nnn lines].
+  a newline: insert after last line of fold.
+- help viewer: two tabs, contents and index. index browser
 - improved window docking:
   - do something about there being more buttons than can fit
   - DockableLayout: handle too large
@@ -57,24 +70,11 @@ TO DO
   - easier way for plugins to add right-click menu commands
   - directory chooser dialog box
   - keyboard select file should activate open files -- or Enter press
-  - search in directory: should use that file's extension
-  - alt-key mnemonics for fields in vfs file dialog
 - write explicit folding tips
-- -noplugins command line switch
-- I/O errors and plugin load errors batched together in one dialog box
-- plugin error dialogs have 'Update Plugins' button
-- icons in i/o error, plugin error dialog boxes
-- if moving caret resulted in expansion of a fold, that fold should be
-  collapsed when the caret leaves that fold
-- next-fold/prev-fold actions
 - clickable stack traces in activity log
-- plugin manager: show all dependencies, not just first-order ones
-- removing a plugin should offer to remove the ones that depend on it too
 - JOptionPane: try adding keyboard mnemonics for no -vs- cancel?
   + more intuitive button labels throughout
 
-- tab: if indent-on-tab on, only indent if in leading whitespace; make
-  indent on tab on by default
 - getFoldLevel(): should not call linesChanged() all the time
 - clean up buffer-local properties, propertiesChanged(), setMode()
 - optimize ContentManager.close()
